# fox-curio-helper

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: context.rs  customer.rs  data.rs  main.rs  util.rs  weather.rs
