[package]
name = "fox_curio_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cardpack = "0.5.1"
inquire = "0.7.5"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
strum = "0.26.3"
strum_macros = "0.26.4"
unic-langid = { version = "0.9.5", features = ["macros"] }
